--- a/app.html
+++ b/app.html
@@ -195,23 +195,12 @@
     <!-- New container for download status -->
     <div class="container">
         <div class="card">
-            <h2>0+ are already downloaded</h2>
+            <h2>50+ are already downloaded</h2>
         </div>
     </div>
 
     <!-- Review section -->
-    <div class="container">
-        <div class="card">
-            <h2>Leave a Review</h2>
-            <div class="stars">
-                <span class="star" data-value="1">&#9734;</span>
-                <span class="star" data-value="2">&#9734;</span>
-                <span class="star" data-value="3">&#9734;</span>
-                <span class="star" data-value="4">&#9734;</span>
-                <span class="star" data-value="5">&#9734;</span>
-            </div>
-        </div>
-    </div>
+    
 
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
@@ -254,7 +243,7 @@
 
         downloadButton.addEventListener("click", function() {
             // Replace the alert with the actual download logic
-            var appFilePath = 'Samartha_1_1.0.apk'; // Relative path to your apk file
+            var appFilePath = 'Echolink_1_1.0.apk'; // Relative path to your apk file
             var link = document.createElement('a');
             link.href = appFilePath;
             link.download = 'sammu_1_1.0.apk'; // Change the filename according to your apk file
